integration-tests/src/snapshots/integration_tests__integration_tests__basic_operation-3.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: --getToolVersion bat
Exit status: exit code: 0
STDOUT:
0.16.0

STDERR:


