integration-tests/src/snapshots/integration_tests__integration_tests__basic_operation.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: bat --version
Exit status: exit code: 0
STDOUT:
🔧 ⏳ Downloading bat 0.16.0🔧 ✅ Downloading bat 0.16.0
bat 0.16.0

STDERR:


