integration-tests/src/snapshots/integration_tests__integration_tests__coreutils-10.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: ver
Exit status: exit code: 0
STDOUT:
0.0.1.1

STDERR:


