integration-tests/src/snapshots/integration_tests__integration_tests__coreutils-11.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: environ
Exit status: exit code: 0
STDOUT:
ITEST

STDERR:


