integration-tests/src/snapshots/integration_tests__integration_tests__coreutils-12.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: coreutils false
Exit status: exit code: 1
STDOUT:

STDERR:
🔧 Command 'coreutils' terminated with exit code 1


