integration-tests/src/snapshots/integration_tests__integration_tests__coreutils-13.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: coreutils true
Exit status: exit code: 0
STDOUT:

STDERR:


