integration-tests/src/snapshots/integration_tests__integration_tests__coreutils-16.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: --invalid-config
Exit status: exit code: 1
STDOUT:

STDERR:
Error: Could not run command '--invalid-config'

Caused by:
    Command '--invalid-config' not found


