integration-tests/src/snapshots/integration_tests__integration_tests__coreutils-17.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: env
Exit status: exit code: 0
STDOUT:
BAR

STDERR:


