integration-tests/src/snapshots/integration_tests__integration_tests__coreutils-2.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: coreutils echo foo
Exit status: exit code: 0
STDOUT:
foo

STDERR:


