integration-tests/src/snapshots/integration_tests__integration_tests__coreutils-3.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: echo bar
Exit status: exit code: 0
STDOUT:
bar

STDERR:


